# Project-3-Data-Reconstruction-and-Analysis

./: LICENSE  README.md  chip_analysis-config.yaml  construct_data.py  data_reconstruction_and_analysis.ipynb  inferences.py  pyproject.toml
src/chip_analysis/: __main__.py  cli.py  data_summary.py  exploratory_data_analysis.py  inferences.py
src/chip_analysis_package/: __main__.py  cli.py  data_summary.py  inferences.py
src/my_package/: data_summary.py  exploratory_data_analysis.py  inferences.py
src/my_package/data/: chip_dataset.csv
