[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "Project_3_Data_Reconstruction_and_Analysis"
authors = [
    {name = "Zhengnan Li", email = "zli6@mail.yu.edu"}
]
maintainers = [
    {name = "Zhengnan Li", email = "zli6@mail.yu.edu"},
]
description = "Project 3 is a assignment to aggregate, group, and reshape data. And present a visualization result by EDA."
readme = "README.md"
keywords = ["data visualization", "Chips of CPU and GPU", "Analytics Programming"]
license = {text = "MIT License"}
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.3",
    "numpy>=1.20",
    "pandas>=1.4",
    "beautifulsoup4>=4.10.0",
    "requests>=2.27.1",
    "seaborn>=0.13.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python"
]
version = "3.2.0"

[project.urls]
Repository = "https://github.com/Zhengnan817/Project-3-Data-Reconstruction-and-Analysis"


[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
select = [
    "C",  # mccabe rules
    "F",  # pyflakes rules
    "E",  # pycodestyle error rules
    "W",  # pycodestyle warning rules
    "B",  # flake8-bugbear rules
    "I",  # isort rules
]
ignore = [
    "C901",  # max-complexity-10
    "E501",  # line-too-long
]

[tool.ruff.format]
indent-style = "space"
quote-style = "single"

[tool.numpydoc_validation]
checks = [
    "all",  # report on all checks
    "ES01", # but don't require an extended summary
    "EX01", # or examples
    "SA01", # or a see also section
    "SS06", # and don't require the summary to fit on one line
]
exclude = [  # don't report on checks for these
    '\.__init__$',
    '\.__repr__$',
    '\.__str__$',
]
override_SS05 = [  # allow docstrings to start with these words
    '^Process ',
    '^Assess ',
    '^Access ',
]